Sat Feb  5 16:17:41 CET 2005 (tk)
---------------------------------
  * libclamav/scanners.c: do not report Suspected.Zip on standard breaking zip
			  archives created by ICEOWS (problem reported by
			  Hamacker <sirhamacker*vidy.com.br> and Dirk Mueller
			  <mueller*kde.org>)

Sat Feb  5 09:39:48 GMT 2005 (trog)
-----------------------------------
  * libclamav/special.c: support for big-endian system in RIFF code.

Fri Feb  4 10:02:08 GMT 2005 (trog)
-----------------------------------
  * libclamav/special.c: check RIFF files for MS05-002. Not yet activated.

Thu Feb  3 21:09:34 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Speed improvements in the handling of bounce messages

Wed Feb  2 08:32:46 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Call watchdog when neither SESSION nor --external is
				given

Tue Feb  1 14:47:21 GMT 2005 (njh)
----------------------------------
  * libclamav/blob.c:	Sanitise tab characters in filenames ("Heinz Martin"
				<Martin*hemag.ch>)
			Decode encapsulated messages that have for some reason
				been base64 encoded (even though they're already
				7 bit)

Tue Feb  1 08:54:46 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Delete X-Virus-Status in clamfi_eom not in
				clamfi_header. Patch by Jef Poskanzer
				<jef*acme.com>
			X-Virus-Status now says that virus that it's infected
				with. Suggestion by "Hank Beatty"
				<hbeatty*starband.net>

Tue Feb  1 03:46:22 CET 2005 (tk)
---------------------------------
  * libclamav/readdb.c: s/cl_strerr/cl_strerror

Mon Jan 31 19:15:48 CET 2005 (tk)
---------------------------------
  * libclamav/readdb.c: update error message

Mon Jan 31 11:05:20 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Empty lines should the end of the headers,
				but some base64 decoders, e.g. uudeview, are
				broken and will handle this type of entry,
				decoding the base64 content that's after the